# BudgetApp

./: .gitignore  Makefile  README.md  package-lock.json  package.json
src/: App.tsx  data.ts  rust-invoke.ts  styles.css  tauriStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  data.rs  db.rs  lib.rs  main.rs  transfer_data.rs  util.rs  write_api.rs
src/components/: BottomNav.tsx  ColumnMapper.tsx  FileMenu.tsx  ImportDataDialog.tsx  IncomeOptions.tsx  NewExpense.tsx  NumericInput.tsx  commonTypes.ts
src/functions/: amountParser.ts  fileOps.ts  shortcuts.ts
src/pages/: BudgetEstimate.css  BudgetEstimate.tsx  Records.tsx
src/pages/BudgetEstimate/: BudgetEstimate.tsx  stateReducer.ts  utils.ts
