[package]
name = "budgeting"
default-run = "budgeting"
version = "0.0.0"
description = "A Tauri App"
authors = ["Jonathan Rotter (hydrogen602)"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }


[dependencies]
tauri = { version = "1.2", features = ["dialog-open", "dialog-save", "global-shortcut-all", "shell-open", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty-money = { version = "0.4.1", features = ["iso"] }
schemars = "0.8.12"
rust_decimal = "1.29.1"
either = { version = "1.8.1", features = ["serde"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
